try button mobile fixes

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -173,8 +173,8 @@ body.modal-open {
 
 @media (max-width: 500px) {
   .mobile-banner-fix {
-    padding-left: 8px;
-    padding-right: 8px;
+    padding-left: 14px;
+    padding-right: 14px;
   }
 }
 
@@ -289,8 +289,8 @@ line-height: 18px;
   display: inline-block;
   padding-top: 12px;
   padding-bottom: 12px;
-  padding-left: 24px;
-  padding-right: 24px;
+  padding-left: 14px;
+  padding-right: 14px;
   transition: 0.4s !important;
 }
 
@@ -303,8 +303,8 @@ line-height: 18px;
   display: inline-block;
   padding-top: 12px;
   padding-bottom: 12px;
-  padding-left: 24px;
-  padding-right: 24px;
+  padding-left: 14px;
+  padding-right: 14px;
   transition: 0.4s !important;
   background-color: #ffffff;
   border-radius: 6px;
@@ -3278,7 +3278,6 @@ header .navbar .navbar-brand {
 }
 header .navbar .navbar-brand .logo {
   vertical-align: bottom;
-  margin-right: 0.5rem;
   width: 40px;
 }
 header .navbar .navbar-collapse {
